Fix suggested by NetBeans IDE code hints (creating a Boolean is inefficient)